--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -24,8 +24,7 @@
 }
 
 window#waybar {
-  /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
-  background-color: rgba(43, 48, 59, 0.5);
+  background-color: rgba(43, 48, 59, 0.4);
   padding: 0;
   margin-top: -1px;
   margin-bottom: -1px;
@@ -271,6 +270,7 @@ label:focus {
 
 #tray {
   background-color: @neutral300;
+  /* background-color: #ff0033; */
 }
 
 #tray > .passive {
@@ -328,6 +328,10 @@ window#waybar > box {
 #custom-dollar {
   background-color: rgba(3, 107, 58, 0.7);
   padding: 0 6px;
+}
+
+#image.dollar {
+  background-color: rgba(255, 255, 255, 0.65);
 }
 
 #custom-mouse_battery {
